test/regression/src/test/idl/compiler/fail/sloppy.idl


module org
{
   module jacorb
   {
      module test
      {
         module idl
         {
            module sloppy
            {
               typedef short sloppy;

               interface I
               {
                  void i (in short j);
               };
            };
         };
      };
   };
};
